src/pages/apt/apt.scss
page-apt {
  font-family: Roboto;

  ion-item {
    max-height: 1em;
  }

  .search--form {
    border: 1px solid #e8e9eb !important;

    .item-inner {
      margin-left: 0 !important;
    }
  }

  .border-round {
    border-radius: 1px;
  }

  .search--form.item-md {
    padding-right: 0;
    padding-left: 0;
  }

  // list apt
  .list--apt {
    .card.card-md {
      width: auto;
    }
  }

  // empty data
  .empty-stage {
    color: #d8d9da;
    line-height: 50% !important;
    text-align: center;
    vertical-align: middle !important;
    display: flex;
    flex-direction: column;

    margin-top: 30% !important;

    ion-icon {
      font-size: 72px;
    }
  }
  .checkbox-input {
    padding-top: 10% !important;
  }

  //checkbox
  @media screen and (max-width: map-get($grid-breakpoints,"md")) {
    .checkbox-input {
      padding-top: 65% !important;
    }
  }
  @media screen and (max-width: map-get($grid-breakpoints,"lg")) {
    .checkbox-input {
      padding-top: 10% !important;
    }
  }

  //footer
  ion-footer {
    background-color: rgba(44, 48, 48, 0.514);
  }

  .filter-apt {
    background-color: #9e9e9e !important;
  }

  .apt-searchbar {
    margin-left: -20px;
    width: 100%;
  }

  .apt-head-panel {
    background-color: white;
    margin-bottom: 40%;
  }
}

